@@ -210,11 +210,7 @@ Bit	Value	Function
 
 Deberia mirar ese bit esta a 1 para poner el contador a 0?
 
--debug cpu. parece que desde el cambio de gestion step to step (con setting disable cpu emulation) ahora al poner un breakpoint
-en 38H, y darle enter en modo step, casi nunca avanza de esa direccion (porque salta de nuevo el breakpoint)
 
-Quizá para corregir El Paso a paso cuando hay breakpoints de por medio sería llamar a la función de core pero que 
-hay por debajo del breakpoint. Aunque esto antes funcionaba bien 
 
 
 -listado de breakpoints: que liste mas alla de 10 (que salga hasta el ultimo definido). O que salgan todos directamente, con opciones de menu que no son listado arriba del todo
@@ -260,3 +256,9 @@ Esto permite saber si los dos son iguales cosa perjudicial en el widget tipo spe
 
 
 -Revisar tbblue dma con efectos sonido cuadragon next
+
+-debug cpu. parece que desde el cambio de gestion step to step (con setting disable cpu emulation) ahora al poner un breakpoint
+en 38H, y darle enter en modo step, casi nunca avanza de esa direccion (porque salta de nuevo el breakpoint)
+
+Quizá para corregir El Paso a paso cuando hay breakpoints de por medio sería llamar a la función de core pero que 
+hay por debajo del breakpoint. Aunque esto antes funcionaba bien 
